# Arduino-Nano-33-BLE-test

./: CMakeLists.txt  README.md  _prj.Debug.conf  _prj.ZRelease.conf
.cache/clangd/index/: main.c.EEA88CB3A9144D46.idx
android_app/nano33_mqtt_client/build-nano33_mqtt_client-Android_Qt_6_6_0_Clang_arm64_v8a-Debug/.qtc_clangd/.cache/clangd/index/: QGuiApplication.A5E2893032E5931E.idx  QMetaType.7975C8F4A5748FAC.idx  QQmlApplicationEngine.96557E6FE78409BD.idx  __bit_reference.2656841D8FADAE73.idx  __config.7A7A0C047DD63356.idx  __debug.28C765B6E1D845E5.idx  __errc.A4383013E19A91FD.idx  __functional_base.DBE3C82D89F71BF3.idx  __mutex_base.56544CA0DDCB1C95.idx  __node_handle.D7F256047F84E5AC.idx  __nullptr.B6525BCAF9E3C24F.idx  __split_buffer.4CB0350CC75F0551.idx  __string.11307F8B4B134B21.idx  __threading_support.4F8C049D86D4F81D.idx  __tree.7CE66395758A6FE4.idx  __tuple.13185B5723877655.idx  __undef_macros.8999E7E9CB6ECDC3.idx  algorithm.9B2D91177A3FC90F.idx  alloca.h.BCD65398B6961114.idx  (+304 more)
android_app/nano33_mqtt_client/build-nano33_mqtt_client-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: .qmake.stash  Makefile.Debug  Makefile.Release
android_app/nano33_mqtt_client/build-nano33_mqtt_client-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/debug/: moc_nano33bleboard.cpp  nano33_mqtt_client.ilk  qrc_qmake_resources.cpp
android_app/nano33_mqtt_client/build-nano33_mqtt_client-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/release/: qmake_resources.qrc
android_app/nano33_mqtt_client/nano33_mqtt_client/: GyroControl.qml  main.cpp  nano33_mqtt_client.pro  nano33bleboard.cpp  nano33bleboard.h
(+272 files in other folders)
